--- a/4-Interactive-Rating/style.css
+++ b/4-Interactive-Rating/style.css
@@ -1,15 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap');
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-}
-
-body {
-  background: #333;
-  display: grid;
-  place-content: center;
-  min-height: 100vh;
-  font-size:15px;
 }
 
 :root {
@@ -24,4 +18,88 @@ body {
   --medium-grey: hsl(216, 12%, 54%);
   --dark-blue: hsl(213, 19%, 18%);
   --very-dark-blue: hsl(216, 12%, 8%);
+}
+
+body {
+  background: var(--very-dark-blue);
+  display: grid;
+  place-content: center;
+  min-height: 100vh;
+  font-size: 15px;
+  font-family: 'Overpass', sans-serif;
+  color: #fff;
+}
+
+.component {
+  width: 435px;
+  padding: 2rem;
+  border-radius: 20px;
+  background: linear-gradient(#232a34, #171d26);
+}
+
+.component__img {
+  padding: 1rem;
+
+  background: var(--dark-blue);
+  border-radius: 50%;
+}
+
+.component__heading {
+  margin: 1.5rem 0 0.8rem;
+  font-size: 28px;
+}
+
+.component__paragraph {
+  line-height: 1.5;
+  color: var(--light-grey);
+}
+
+.component__rating {
+  margin: 1rem 0 1.5rem;
+}
+
+button,
+a {
+  display: inline-block;
+  font-family: inherit;
+  transition: background 0.2s ease;
+}
+
+.component__rate {
+  background: var(--dark-blue);
+  padding: 1rem 1.5rem;
+  margin: 0.5rem 0.9rem 0.5rem 0;
+  border-radius: 50%;
+  font-weight: bold;
+  color: var(--medium-grey);
+
+  cursor: pointer;
+  border: none;
+}
+.selected {
+  background:var(--medium-grey);
+  color:var(--white);
+}
+
+.component__rate:hover {
+  background: var(--orange);
+  color: var(--white);
+}
+
+.component__btn {
+  padding: 0.5rem 9rem;
+  border-radius: 20px;
+  background: var(--orange);
+  color: var(--white);
+  font-weight: 500;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  display: inline-block;
+  cursor: pointer;
+}
+
+.component__btn:hover {
+  background: var(--white);
+  color: var(--orange);
+  font-weight: bold;
 }
