--- a/6-E-Learning-Landing-Page/style.css
+++ b/6-E-Learning-Landing-Page/style.css
@@ -1,10 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;600;700;800&display=swap');
+
+/**** || REST || ****/
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;600;700;800&display=swap');
+/**** || VARIABLES || ****/
 :root {
   /* ### Colors ### */
   --light-blue: hsl(234, 25%, 52%);
@@ -16,11 +19,14 @@
   --orange-gradient: linear-gradient(hsl(322, 87%, 55%), hsl(13, 100%, 64%));
   --purple-gradient: linear-gradient(hsl(237, 100%, 64%), hsl(322, 87%, 55%));
 }
+
+/**** || GENERAL SETUP || ****/
 body {
   font-family: 'Plus Jakarta Sans', sans-serif;
   font-size: 18px;
   line-height: 28px;
   font-weight: 400;
+  background: var(--white);
 }
 
 button,
@@ -38,6 +44,7 @@ h6 {
 h1 {
   font-size: 56px;
   line-height: 70px;
+  color:var(--dark-blue);
 }
 h2 {
   font-size: 40px;
@@ -55,11 +62,12 @@ h5 {
   line-height: 28px;
 }
 
+/**** || UTILITY CLASSES || ****/
+
 .btn {
   border: none;
   border-radius: 20px;
   padding: 0.8rem 1.6rem;
-  margin-top: 3rem;
   color: var(--white);
   font-weight: bold;
   cursor: pointer;
@@ -75,8 +83,7 @@ h5 {
   background: var(--orange-gradient);
 }
 .btn--orange:hover {
-  --orange-gradient: linear-gradient(hsla(322, 87%, 55%, 0.6), hsla(13, 100%, 64%, 0.6) );
-
+  --orange-gradient: linear-gradient(hsla(322, 87%, 55%, 0.6), hsla(13, 100%, 64%, 0.6));
 }
 
 .btn--purple {
@@ -85,4 +92,41 @@ h5 {
 
 .btn--purple:hover {
   --purple-gradient: linear-gradient(hsla(237, 100%, 64%, 0.5), hsla(322, 87%, 55%, 0.5));
+}
+
+img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+/**** || NAVBAR || ****/
+main {
+  max-width: 1300px;
+  margin: 0 auto;
+  padding: 0 1rem;
+}
+
+.navbar {
+  margin-top: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.hero {
+  display: flex;
+  align-items: center;
+}
+
+.hero__left {
+  position: relative;
+  top: -117px;
+  left: 290px;
+}
+
+.hero__paragraph {
+  margin:29px 0 30px 0;
+  width:70%;
+  color:var(--light-gray);
 }
