--- a/6-E-Learning-Landing-Page/style.css
+++ b/6-E-Learning-Landing-Page/style.css
@@ -102,22 +102,19 @@ img {
 }
 
 /**** || NAVBAR || ****/
-main {
-  padding: 0 1rem;
-}
 
 .container {
-  max-width: 1300px;
+  max-width: 1440px;
   margin: 0 auto;
-}
-
-header {
-  max-width: 1300px;
-  margin: 0 auto;
+  padding: 0 2rem;
 }
 
 .navbar {
   margin-top: 1rem;
+
+  margin: 2rem;
+}
+.container--navbar {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -128,21 +125,23 @@ header {
   align-items: center;
 }
 
+.hero__left {
+  width: 100%;
+}
 .hero__right {
   position: relative;
-  top: -117px;
-  left: 290px;
-  overflow-x: hidden;
+  top: -135px;
+  left: 339px;
+  z-index: -100;
 }
-
 .hero__paragraph {
   margin: 29px 0 30px 0;
-  width: 70%;
+  width: 90%;
   color: var(--light-gray);
 }
 
 .features {
-  padding-bottom: 3rem;
+  padding-bottom: 7rem;
   background: linear-gradient(hsl(234, 100%, 100%), hsl(234, 100%, 97%));
 }
 .features__cards {
@@ -192,3 +191,16 @@ header {
 .card__link:hover {
   color: var(--light-red);
 }
+
+.footer {
+  background: var(--dark-blue);
+  padding: 0 2rem;
+}
+.container--footer {
+  color: #fff;
+  display: flex;
+  justify-content: space-between;
+  padding: 2rem 0;
+}
+
+
