Complete HTML & CSS

--- a/6-Equalizer/style.css
+++ b/6-Equalizer/style.css
@@ -13,18 +13,31 @@
   --color-white: #fff;
 
   /* ## Typography ## */
-  --h1-size: 8.8rem;
-  --h1-height: 8.8rem;
+  --h1-large-size: 8.8rem;
+  --h1-large-height: 8.8rem;
+
+  --h1-medium-size: 6.4rem;
+  --h1-medium-height: 6.4rem;
+
+  --h1-small-size: 4rem;
+  --h1-small-height: 4.8rem;
+
   --h1-spacing: -1px;
 
-  --h2-size: 4rem;
-  --h2-height: 5.2rem;
+  --h2-large--size: 4rem;
+  --h2-large-height: 5.2rem;
 
-  --large-body-text-size: 2rem;
-  --large-body-text-height: 3.4rem;
+  --h2-small--size: 3.2rem;
+  --h2-small-height: 4rem;
 
-  --small-body-text-size: 1.6rem;
-  --small-body-text-height: 2.6rem;
+  --p-large-size: 2rem;
+  --p-large-height: 3.4rem;
+
+  --p-medium-size: 1.8rem;
+  --p-medium-height: 2.8rem;
+
+  --p-small-size: 1.6rem;
+  --p-small-height: 2.6rem;
 }
 
 /*********************************  
@@ -42,8 +55,11 @@ html {
 body {
   font-family: 'IBM Plex Sans', sans-serif;
   font-weight: 400;
-  color: hsl(--color-black);
-  background: orange;
+  color: hsl(var(--color-black));
+  background: hsl(var(--light-white));
+}
+ul {
+  list-style: none  ;
 }
 
 button {
@@ -59,12 +75,11 @@ img {
 /*********************************  
           || Utility Classes  || 
 **********************************/
-  /* ## Buttons ## */
+/* ## Buttons ## */
 .btn {
   font-size: 1.8rem;
   font-weight: bold;
   padding: 0.9em 4.8em;
-  margin: 5rem;
   display: flex;
   align-items: center;
   border-radius: 1.2rem;
@@ -105,7 +120,138 @@ img {
   height: 20px;
 }
 
-  /* ## Typography ## */
+/* ## Typography ## */
 .bold {
   font-weight: bold;
+}
+
+/* ## Layout ## */
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+
+}
+
+/*********************************  
+      || Header || 
+**********************************/
+
+.header__logo {
+  margin-top: 4rem;
+}
+
+.header__bg {
+  position: absolute;
+  top: -150px;
+  left: -100px;
+  z-index: -1;
+}
+
+.header__pattern {
+  position: absolute;
+  top: -40px;
+  right: 0;
+}
+
+.header__heading {
+  font-size: var(--h1-large-size);
+  line-height: var(--h1-large-height);
+  letter-spacing: var(--h1-spacing);
+  margin: 10rem 0 4rem;
+  width: 80%;
+}
+
+.header__paragraph {
+  font-size: var(--p-large-size);
+  line-height: var(--p-large-height);
+  width: 62%;
+}
+
+/*********************************  
+         || Payment || 
+**********************************/
+.payment {
+  max-width: 1200px;
+  min-height: 600px;
+  background: hsl(var(--color-black));
+  border-radius: 10px;
+  margin: 30rem auto 20rem;
+  position: relative;
+}
+
+.payment__img {
+  width: 31.2rem;
+  height: 64.2rem;
+  position: absolute;
+  top: -200px;
+  left: 100px;
+  z-index: 2;
+}
+
+.payment__pattern {
+  position: absolute;
+  z-index: 1;
+  left: 335px;
+  top: -45px;
+}
+
+.card {
+  font-size: var(--p-large-size);
+  line-height: var(--p-large-height);
+  background: hsl(var(--color-red));
+  color: hsl(var(--light-white));
+  padding: 3rem 5rem;
+  width: 44.6rem;
+  border-radius: 12px;
+  position: absolute;
+  top:100px;
+  right:170px;
+  z-index:3;
+}
+
+
+.card__heading {
+  margin:3rem 0 2.2rem;
+  font-size: var(--h2-large--size);
+}
+
+.card__price {
+  font-size: 6.5rem;
+  font-weight: bold;
+  margin:3.9rem 0 3.6rem;
+}
+
+.card__price--small {
+  font-size:2rem;
+  font-weight: 400;
+  display:inline-block;
+  vertical-align: middle;
+}
+
+.card .btn {
+  margin-bottom:1.6rem;
+}
+
+/*********************************  
+          || Footer  || 
+**********************************/
+.container--footer{
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom:5rem;
+}
+
+.footer__paragraph {
+  font-size: var(--p-small-size);
+  line-height: var(--p-small-height);
+  width:29%;
+}
+
+.icons__list {
+  display:flex;
+}
+
+.icon__item {
+  margin-right:2rem;
 }
