--- a/7-order-summary/style.css
+++ b/7-order-summary/style.css
@@ -3,26 +3,28 @@
 :root {
   /* | Background Colors |  */
   --bg-pale-blue: hsl(225, 100%, 94%);
-  --bg-bright-blue:hsl(245, 75%, 52%);
+  --bg-bright-blue: hsl(245, 75%, 52%);
 
   /* | Text Colors | */
-  --very-pale-blue:hsl(225, 100%, 98%);
+  --very-pale-blue: hsl(225, 100%, 98%);
   --desaturated-blue: hsl(224, 23%, 55%);
-  --dark-blue:hsl(223, 47%, 23%);
-
+  --dark-blue: hsl(223, 47%, 23%);
 }
 /* || RESET || */
 * {
-  padding:0;
-  margin:0;
+  padding: 0;
+  margin: 0;
   box-sizing: border-box;
 }
 
 /* || GENERAL STYLES || */
+main {
+  height:100vh;
+}
 body {
   font-size: 16px;
   font-family: 'Red Hat Display', sans-serif;
-  background: var(--very-dark-blue-main-bg);
+  background: var(--bg-pale-blue);
   display: grid;
   place-content: center;
 }
@@ -33,10 +35,118 @@ img {
   height: auto;
 }
 
-/* .card {
-  width: 350px;
-  background-color: var(--very-dark-blue-card-bg);
-  padding: 1.5rem;
+.card {
+  width: 327px;
+  background: #fff;
   border-radius: 20px;
-  margin: 3rem 1rem;
-} */
+  margin: 5rem auto;
+}
+
+.pattern__mobile {
+  position: absolute;
+  top:0;
+  left:0;
+  z-index: -1;
+}
+
+.card__img {
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+}
+
+.card__content {
+  text-align: center;
+  padding:2rem 1.5rem;
+}
+
+.card__heading {
+  font-weight: 900;
+  font-size:22px;
+  margin-bottom:16px;
+  color:var(--dark-blue)
+}
+
+.card__paragraph {
+  color:var(--desaturated-blue);
+  margin-bottom:20px;
+  line-height:25px;
+}
+
+.card__plan {
+  display:flex;
+  background:hsl(225, 100%, 98%);
+  align-items: center;
+  justify-content: space-between;
+  padding:1rem 1rem;
+  border-radius: 10px;
+  margin-bottom:1.5rem;
+}
+.plan__icon {
+  width:48px;
+  height:48px;
+}
+
+.plan__details {
+  display:flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-right:25px;
+}
+
+.plan__heading {
+  font-size:14px;
+  font-weight: 900;
+}
+
+.plan__price {
+  font-size:14px;
+  font-weight: 500;
+  color:var(--desaturated-blue);
+  margin-top:4px;
+}
+
+.plan__link {
+  font-size:14px;
+  font-weight: bold;
+  color:var(--bg-bright-blue);
+  text-decoration: none;
+  border-bottom:2px solid var(--bg-bright-blue);
+}
+
+.buttons__container {
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+
+
+}
+.btn {
+  font-family: inherit;
+  border:none;
+  cursor: pointer;
+  transition: background 0.2s ease-in-out;
+  font-weight: 900;
+  font-size:15px;
+}
+
+.btn--payment {
+  background:var(--bg-bright-blue);
+  color:#fff;
+  padding:0.9rem 4rem;
+  border-radius: 10px;
+  margin-bottom:24px;
+  
+}
+
+.btn--payment:hover {
+ background: hsl(245, 75%, 42%);
+}
+
+.btn--cancel {
+  color:var(--desaturated-blue);
+  background:transparent;
+}
+
+.btn--cancel:hover {
+  background:hsl(224, 23%, 65%);
+}
