--- a/8-stats-preview-card/app/scss/globals/_boilerplate.scss
+++ b/8-stats-preview-card/app/scss/globals/_boilerplate.scss
@@ -12,6 +12,14 @@ html {
 
 body {
   font-family: u.$font-inter;
-  background:cyan;
+  background:var(--main-background);
   color:var(--main-heading);
+  line-height: 1.5;
+}
+
+img {
+  display:block;
+  max-width: 100%;
+  height:auto;
+  
 }
