--- a/8-stats-preview-card/app/scss/globals/_colors.scss
+++ b/8-stats-preview-card/app/scss/globals/_colors.scss
@@ -1,10 +1,10 @@
 :root {
   --main-background: hsl(233, 47%, 7%);
-  --card-background: hsl(244, 38%, 16%);
-  --accent-color:hsl(277, 64%, 61%);
+  --card-background: #1b1938;
+  --accent-color:hsl(277, 64%, 64%);
 
   // ## Neutral Colors ## 
   --main-heading:hsl(0, 0%, 100%);
   --main-paragraph:hsla(0, 0%, 100%, 0.75);
-  --stat-headings:hsla(0, 0%, 100%, 0.6);
+  --stat-headings:#ffffff99;
 }
