--- a/8-stats-preview-card/app/scss/layout/_card.scss
+++ b/8-stats-preview-card/app/scss/layout/_card.scss
@@ -9,13 +9,13 @@
   position: relative;
 }
 .image-container::before {
-  content: "";
+  content: '';
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: hsla(277, 64%, 61% , 0.7); /* Change the color and opacity as needed */
+  background-color: hsla(277, 64%, 61%, 0.7); /* Change the color and opacity as needed */
   z-index: 1;
 }
 
@@ -26,45 +26,46 @@
   text-align: center;
   max-width: 650px;
   margin: 3rem auto;
+  overflow: hidden;
 
   @include u.breakpoint(tablet) {
     display: flex;
     max-width: 1100px;
-    margin-top: 5rem;
+    margin-top: 9rem;
   }
+
+
 
   &__img {
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
 
-    width:100%;
-    height:100%;
+    width: 100%;
+    height: 100%;
 
-
-
+    object-fit: cover;
 
     @include u.breakpoint(tablet) {
-      width:100%;
+      width: 100%;
       order: 2;
       border-top-left-radius: 0;
       border-bottom-right-radius: 10px;
     }
 
     @include u.breakpoint(desktop) {
-      width:100%;
-
+      width: 100%;
     }
   }
   &__content {
     padding: 1rem 2rem;
-    order:-1;
+    order: -1;
   }
 
   &__title {
     padding: 1rem 3rem;
 
     @include u.breakpoint(tablet) {
-      padding:3rem 0 1rem;
+      padding: 3rem 0 1rem;
     }
 
     @include u.breakpoint(desktop) {
@@ -74,32 +75,27 @@
 
   &__description {
     color: var(--main-paragraph);
-    padding:0 1.5rem;
+    padding: 0 1.5rem;
     line-height: 1.7;
 
     @include u.breakpoint(desktop) {
-      padding:0 3rem;
+      padding: 0 3rem;
       text-align: left;
     }
-
   }
 }
 
 .info {
   @include u.breakpoint(tablet) {
-    display:flex;
+    display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-top:3.5rem;
-    padding:0 2.3rem;
-
-
+    margin-top: 3.5rem;
+    padding: 0 2.3rem;
   }
-
 
   &__heading {
     margin-bottom: 0.3rem;
-
   }
 
   &__description {
@@ -109,4 +105,12 @@
 
 .highlight {
   color: var(--accent-color);
+}
+
+.attribution {
+  text-align: center;
+
+  & a {
+    color: #fff;
+  }
 }
