--- a/8-stats-preview-card/app/scss/layout/_card.scss
+++ b/8-stats-preview-card/app/scss/layout/_card.scss
@@ -7,6 +7,7 @@
 
 .image-container {
   position: relative;
+  width:100%;
 }
 .image-container::before {
   content: '';
@@ -33,8 +34,6 @@
     max-width: 1100px;
     margin-top: 9rem;
   }
-
-
 
   &__img {
     border-top-left-radius: 10px;
