convert colors back to HSL

--- a/8-stats-preview-card/app/scss/globals/_colors.scss
+++ b/8-stats-preview-card/app/scss/globals/_colors.scss
@@ -5,6 +5,6 @@
 
   // ## Neutral Colors ## 
   --main-heading:hsl(0, 0%, 100%);
-  --main-paragraph:hsla(0, 0%, 100%, 0.75);
+  --main-paragraph:#ffffffbf;
   --stat-headings:#ffffff99;
 }
