--- a/9-meet-landing-page/style.css
+++ b/9-meet-landing-page/style.css
@@ -2,12 +2,13 @@
 
 :root {
   /* ## Colors ## */
-  --light-green: 192, 37%, 48%;
+  --light-green: 192, 37%, 38%;
+
   --light-cyan: 192, 90%, 77%;
-  --dark-pink: 268, 34%, 53%;
+  --dark-pink: 268, 34%, 43%;
   --light-pink: 268, 100%, 86%;
   --main-black: 240, 21%, 20%;
-  --light-gray: 240, 10%, 57%;
+  --light-gray: 240, 10%, 45%;
 
   --light-white: 0, 0%, 98%;
 
@@ -51,6 +52,10 @@ button {
   transition: all 0.2s ease-in;
 }
 
+.btn--highlight {
+  transition: color 0.2s ease-in;
+  margin-left:3px;
+}
 .btn {
   padding: 1.4rem 2.5rem;
   color: hsl(var(--light-white));
@@ -65,27 +70,33 @@ button {
 
 .btn-1 .btn--highlight {
   color: hsl(var(--light-cyan));
+  
 }
 
 .btn-1:hover {
   background: hsl(192, 54%, 64%);
+  color:black;
 }
 .btn-1:hover .btn--highlight {
-  color: hsl(var(--light-cyan));
+
+  color:#333;
 }
 
 .btn-2 {
   background: hsl(var(--dark-pink));
 }
 .btn-2 .btn--highlight {
-  color: hsl(var(--light-pink));
+  color: hsl(268, 100%, 90%)
+  
 }
 
 .btn-2:hover {
-  background: hsl(268, 55%, 71%);
+  background: hsl(268, 55%, 41%);
+
 }
 .btn-2:hover .btn--highlight {
   color: hsl(var(--light-cyan));
+
 }
 
 .number {
@@ -116,6 +127,7 @@ button {
   line-height: 2.6rem;
   letter-spacing: 4px;
   color: hsl(var(--light-green));
+  font-weight: 900;
 }
 /* Header */
 .header {
@@ -204,7 +216,7 @@ button {
 /* Footer */
 .footer {
   margin-top: 14rem;
-  background: linear-gradient(hsla(var(--light-green), 0.9), hsla(var(--light-green), 0.9)), url('./assets/desktop/image-footer.jpg');
+  background: linear-gradient(hsla(var(--light-green), 0.9), hsla(var(--light-green), 0.9)), url('./assets/desktop/image-footer.webp');
   background-size: cover;
 
   display: flex;
@@ -280,7 +292,7 @@ button {
   }
 
   .footer {
-    background: linear-gradient(hsla(var(--light-green), 0.9), hsla(var(--light-green), 0.9)), url('./assets/tablet/image-footer.jpg');
+    background: linear-gradient(hsla(var(--light-green), 0.9), hsla(var(--light-green), 0.9)), url('./assets/tablet/image-footer.webp');
     flex-direction: column;
 
     text-align: center;
@@ -313,7 +325,7 @@ button {
   }
 
   .footer {
-    background: linear-gradient(hsla(var(--light-green), 0.9), hsla(var(--light-green), 0.9)), url('./assets/mobile/image-footer.jpg');
+    background: linear-gradient(hsla(var(--light-green), 0.9), hsla(var(--light-green), 0.9)), url('./assets/mobile/image-footer.webp');
     background-position: center top;
     padding: 10rem 6rem 5rem;
   }
