finish mobile responsive style

--- a/10-column-preview-card/style.css
+++ b/10-column-preview-card/style.css
@@ -24,10 +24,9 @@ body {
   color: #fff;
   font-family: 'Lexend Deca', sans-serif;
   line-height: 1.5;
-  font-size:1.5rem;
-  display:grid;
+  font-size: 1.5rem;
+  display: grid;
   place-content: center;
-
 }
 
 h1,
@@ -40,48 +39,69 @@ h3 {
 button {
   font-family: inherit;
   cursor: pointer;
-  border:none;
+  border: none;
   transition: all 0.2s ease-in;
 }
 
 /* Cards */
 .cards {
-  display:flex;
+  display: flex;
   flex-direction: column;
-  margin:4rem 0 ;
+  margin: 4rem 0;
+  padding:0 1rem;
 }
 
 .card {
-  width:32.7rem;
-  padding:4.9rem;
+  width: 32.7rem;
+  padding: 4.9rem;
 }
 
 .card--sedan {
-  background:var(--bright-orange);
-  border-top-left-radius:5px;
-  border-top-right-radius:5px;
+  background: var(--bright-orange);
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
 }
 
 .card__heading {
-  padding:3.5rem 0 2.5rem;
+  padding: 3.5rem 0 2.5rem;
   font-size: 4rem;
   text-transform: uppercase;
 }
 
 .card__text {
-  color:var(--text-white);
+  color: var(--text-white);
   line-height: 2.5rem;
-  padding-bottom:2.5rem;
+  padding-bottom: 2.5rem;
 }
 
 .card__btn {
-  padding:1.3rem 3rem;
+  padding: 1.3rem 3rem;
   border-radius: 15px;
-  background:var(--very-light-gray);
-  color:var(--bright-orange);
+  background: var(--very-light-gray);
 }
 
+.btn--sedan {
+  color: var(--bright-orange);
+}
 .card__btn:hover {
-  background:hsl(0, 0%, 0%);
-  color:#fff;
+  background: hsl(0, 0%, 0%);
+  color: #fff;
+}
+
+.card--suvs {
+  background: var(--dark-cyan);
+}
+.btn--suvs {
+  color: var(--dark-cyan);
+}
+
+
+.card--luxury {
+  background:var(--very-dark-cyan);
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+.btn--luxury {
+  color:var(--very-dark-cyan);
 }
